PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 8.4.0alpha1

Core:
  . Added zend_call_stack_get implementation for NetBSD. (David Carlier)

DOM:
  . Added DOMNode::compareDocumentPosition(). (nielsdos)

Intl:
  . Added IntlDateFormatter::PATTERN constant. (David Carlier)

Standard:
  . Implement GH-12188 (Indication for the int size in phpinfo()). (timwolla)
  . Partly fix GH-12143 (Incorrect round() result for 0.49999999999999994).
    (timwolla)

<<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>